# GiocoGiorgiManzotti

./: README.md  pyproject.toml
src/giocogiorgimanzotti/: __init__.py
