[project]
name = "giocogiorgimanzotti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrea Diamantini", email = "adjam@proton.me" }
]
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
giocogiorgimanzotti = "giocogiorgimanzotti:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
